[package]
name = "cj_common"
version = "0.1.2"
edition = "2021"
keywords = ["hex", "base64", "range", "bit", "inset"]
categories = ["encoding", "parsing"]
repository = "https://github.com/cubicle-jockey/cj_common"
homepage = "https://github.com/cubicle-jockey/cj_common/wiki"
description = "Collection of common functions used by cubicle-jockey projects"

[lib]
name = "cj_common"
path = "src/lib.rs"

#[[bin]] #only used for testing/stepping through the code
#name = "test"
#path = "src/_main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
#opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic

[dependencies]

