[package]
name = "cj_common"
version = "1.2.1"
edition = "2024"
keywords = ["hex", "base64", "range", "bit", "inset"]
categories = ["encoding", "parsing"]
repository = "https://github.com/cubicle-jockey/cj_common"
homepage = "https://github.com/cubicle-jockey/cj_common/wiki"
description = "Collection of common functions used by cubicle-jockey projects"
license = "MIT OR Apache-2.0"

[lib]
name = "cj_common"
path = "src/lib.rs"

[[bin]] #only used for testing/stepping through the code
name = "test"
path = "src/_main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
channel = ["tokio", "tokio-util", "futures"]
timext = ["time"]

[dependencies]
tokio = { version = "1.48.0", optional = true }
tokio-util = { version = "0.7.17", optional = true }
futures = { version = "0.3.31", optional = true }
time = { version = "0.3.44", optional = true }


[package.metadata.docs.rs]
all-features = true


[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

